src/objects/BMCServiceDesk__BMC_IPConnectivitySubnet__c.object
<CustomObject>
    <description>BMC_IPConnectivitySubnet. CMDB Class that stores information about groups of related IP protocol endpoints that can communicate with each other as members of a subnet. This class describes the characteristics of the subnet. Endpoint instances are related to an instance of this class by a BMC_InIPSubnet relationship. This class corresponds to the DMTF CIM_IPConnectivitySubnet class.</description>
    <fields>
        <fullName>BMCServiceDesk__Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IPv4</fullName>
                </value>
                <value>
                    <fullName>IPv6</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Exploration_Date__c</fullName>
        <label>Exploration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Prefix_Length__c</fullName>
        <label>Prefix Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Subnet_Mask__c</fullName>
        <label>Subnet Mask</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Subnet_Number__c</fullName>
        <label>Subnet Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>IP Connectivity Subnet</label>
    <nameField>
        <label>IP Connectivity Subnet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IP Connectivity Subnet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>